# post-server

./: .env  Cargo.toml  Dockerfile
migrations/2020-10-10-145604_create_posts/: up.sql
migrations/2020-10-10-151446_create_tags/: up.sql
migrations/2020-10-10-151955_create_posts_tags/: up.sql
src/: lib.rs  main.rs  models.rs  post_service.rs  schema.rs
